external-domains/debug-app-np.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app:
  name:
  namespace: default
spec:
  ports:
  - name:
    protocol: TCP
    port: 80
    targetPort: 9292
  type: NodePort
