external-domains/hello-world-np.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world-np
  namespace: default
spec:
  ports:
  - name: hello-world-np
    protocol: TCP
    port: 80
    targetPort: 9292
  type: NodePort
